--- a/style.css
+++ b/style.css
@@ -105,3 +105,29 @@ main {
     stroke: var(--stroke-color);
   }
 }
+
+.winningLineBox {
+  position: absolute;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  display: contents;
+}
+
+.winningMark {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  stroke: var(--stroke);
+  stroke-width: 5;
+  stroke-linecap: round;
+  stroke-dasharray: var(--distance) var(--distance);
+  stroke-dashoffset: var(--distance);
+  animation: winningLine 1s forwards;
+}
+
+@keyframes winningLine {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
